# InsightMesh

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/InsightMesh 智能调研平台前端原型/: _module.yaml  概述.md  (+3 more)
.qoder/repowiki/zh/content/: 快速开始.md  状态页面.md  组件系统.md  页面导航.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py  store.py
app/agents/: __init__.py  analyst.py  base.py  collector.py  integrator.py  pipeline.py  report_generator.py  verifier.py
app/api/: __init__.py
app/api/routes/: auth.py  reports.py  research.py  user.py
front/: index.html  jsconfig.json  package-lock.json  package.json
front/src/: App.jsx  router.jsx
front/src/app/: layout.jsx
front/src/app/how/: page.jsx
front/src/app/profile/: page.jsx
front/src/app/report/: page.jsx
front/src/components/: LogoMark.jsx  TopNav.jsx
front/src/pages/: CasesPage.jsx  CreatePage.jsx  ExecutionPage.jsx  FeaturesPage.jsx  HomePage.jsx  HowPage.jsx  LoginPage.jsx  ProfilePage.jsx  ReportPage.jsx
front/src/pages/states/: EmptyState.jsx  ErrorState.jsx  NetworkState.jsx  PermissionState.jsx
front/src/styles/: globals.css
src/app/: page.jsx
src/app/cases/: page.jsx
src/app/create/: page.jsx
src/app/execution/: page.jsx
src/app/features/: page.jsx
src/app/login/: page.jsx
src/app/states/error/: page.jsx
src/app/states/loading/: page.jsx
src/app/states/permission/: page.jsx
(+26 files in other folders)
