[project]
name = "backend"
version = "0.1.0"
description = "InsightMesh 多 AI Agent 智能调研平台后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
dev = "uvicorn:main"

[dependency-groups]
dev = []
