[project]
name = "backend"
version = "0.1.0"
description = "InsightMesh 多 AI Agent 智能调研平台后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "deepagents>=0.6.12",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[project.scripts]
dev = "uvicorn:main"

[dependency-groups]
dev = []
